# IsostratGame

./: .gitignore  IsostratGame.sln  README.md
IsostratGame/: CMakeLists.txt  GameConfig.h.in  IsostratGame.vcxproj  IsostratGame.vcxproj.filters
IsostratGame/include/: base.h  camera.h  config.h  console.h  debugrender.h  def.h  game.h  graphics.h  input.h  platform.h
IsostratGame/include/script/: luagame.h  luainterface.h  luascript.h  luautil.h
IsostratGame/include/shader/: shaderbase.h
IsostratGame/include/ui/: font.h  interface.h  interface_label.h  interface_screen.h  localization.h
IsostratGame/include/world/: block.h  chunkmanager.h  world.h
IsostratGame/source/: camera.cpp  config.cpp  console.cpp  debugrender.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp
IsostratGame/source/script/: luagame.cpp  luainterface.cpp  luascript.cpp  luautil.cpp
IsostratGame/source/shader/: shaderbase.cpp
IsostratGame/source/ui/: font.cpp  interface.cpp  interface_label.cpp  interface_screen.cpp  localization.cpp
IsostratGame/source/world/: block.cpp  chunkmanager.cpp  world.cpp
